--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "react-icons": "^4.4.0",
     "react-kakao-maps-sdk": "^1.1.24",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
