--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.1",
     "framer-motion": "^7.3.6",
+    "hoist-non-react-statics": "^3.3.2",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
@@ -25,6 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.24",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
