--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.36.1",
